[gd_scene load_steps=9 format=3 uid="uid://bwl2icwgry4l"]

[ext_resource type="Script" path="res://core/ui/menu/launch/game_launch_menu.gd" id="1_uhkt4"]
[ext_resource type="Theme" uid="uid://bko0q7gp1hwjp" path="res://assets/themes/dracula.tres" id="2_q87np"]
[ext_resource type="Texture2D" uid="uid://d1mksukdkqorr" path="res://assets/images/placeholder-grid-banner.png" id="3_io70p"]
[ext_resource type="PackedScene" uid="uid://df5o1o2dsik84" path="res://core/ui/components/button.tscn" id="4_7y2kk"]
[ext_resource type="PackedScene" uid="uid://bargrxdqbu3gl" path="res://core/systems/launcher/launcher.tscn" id="5_13gqy"]
[ext_resource type="Texture2D" uid="uid://bi3kevyi1dgys" path="res://assets/icons/game-controller.svg" id="6_hc1fc"]
[ext_resource type="Texture2D" uid="uid://bu4bm2a56t5g5" path="res://assets/icons/config.svg" id="7_qo3p1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1ef1c"]
bg_color = Color(0.741176, 0.576471, 0.976471, 1)

[node name="GameLaunchMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uhkt4")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_q87np")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
follow_focus = true
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20

[node name="GameBanner" type="TextureRect" parent="ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 440)
layout_mode = 2
texture = ExtResource("3_io70p")
expand_mode = 1
stretch_mode = 4

[node name="MarginContainer" type="MarginContainer" parent="ScrollContainer/VBoxContainer/GameBanner"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20

[node name="GameLogo" type="TextureRect" parent="ScrollContainer/VBoxContainer/GameBanner/MarginContainer"]
layout_mode = 2

[node name="LaunchBarMargin" type="MarginContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20

[node name="LaunchBar" type="HBoxContainer" parent="ScrollContainer/VBoxContainer/LaunchBarMargin"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="LaunchButtonContainer" type="HBoxContainer" parent="ScrollContainer/VBoxContainer/LaunchBarMargin/LaunchBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LaunchButton" parent="ScrollContainer/VBoxContainer/LaunchBarMargin/LaunchBar/LaunchButtonContainer" instance=ExtResource("4_7y2kk")]
layout_mode = 2
focus_neighbor_left = NodePath("../../SettingsButton")
focus_neighbor_right = NodePath("../OptionButton")
theme_override_styles/normal = SubResource("StyleBoxFlat_1ef1c")
text = "Launch"

[node name="Launcher" parent="ScrollContainer/VBoxContainer/LaunchBarMargin/LaunchBar/LaunchButtonContainer/LaunchButton" instance=ExtResource("5_13gqy")]

[node name="OptionButton" type="OptionButton" parent="ScrollContainer/VBoxContainer/LaunchBarMargin/LaunchBar/LaunchButtonContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
focus_neighbor_left = NodePath("../LaunchButton")
focus_neighbor_right = NodePath("../../ControllerButton")

[node name="LastPlayedContainer" type="VBoxContainer" parent="ScrollContainer/VBoxContainer/LaunchBarMargin/LaunchBar"]
layout_mode = 2

[node name="LastPlayedTitle" type="Label" parent="ScrollContainer/VBoxContainer/LaunchBarMargin/LaunchBar/LastPlayedContainer"]
layout_mode = 2
text = "LAST PLAYED"

[node name="LastPlayed" type="Label" parent="ScrollContainer/VBoxContainer/LaunchBarMargin/LaunchBar/LastPlayedContainer"]
layout_mode = 2
text = "Nov 21"

[node name="PlayTimeContainer" type="VBoxContainer" parent="ScrollContainer/VBoxContainer/LaunchBarMargin/LaunchBar"]
layout_mode = 2

[node name="PlayTimeTitle" type="Label" parent="ScrollContainer/VBoxContainer/LaunchBarMargin/LaunchBar/PlayTimeContainer"]
layout_mode = 2
text = "PLAY TIME"

[node name="LastPlayed" type="Label" parent="ScrollContainer/VBoxContainer/LaunchBarMargin/LaunchBar/PlayTimeContainer"]
layout_mode = 2
text = "Nov 21"

[node name="Spacer" type="Control" parent="ScrollContainer/VBoxContainer/LaunchBarMargin/LaunchBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ControllerButton" parent="ScrollContainer/VBoxContainer/LaunchBarMargin/LaunchBar" instance=ExtResource("4_7y2kk")]
visible = false
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 1
focus_neighbor_left = NodePath("../LaunchButtonContainer/OptionButton")
focus_neighbor_right = NodePath("../SettingsButton")
icon = ExtResource("6_hc1fc")
icon_alignment = 1
expand_icon = true

[node name="SettingsButton" parent="ScrollContainer/VBoxContainer/LaunchBarMargin/LaunchBar" instance=ExtResource("4_7y2kk")]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 1
focus_neighbor_left = NodePath("../ControllerButton")
focus_neighbor_right = NodePath("../LaunchButtonContainer/LaunchButton")
icon = ExtResource("7_qo3p1")
icon_alignment = 1
expand_icon = true

[node name="HSeparator" type="HSeparator" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
